src/scss/frontend/_.scss
@import '../shared/_';

#bitnami-banner { display: none !important; }

*,
*:before,
*:after {
	box-sizing: border-box;
}

html, body {
	margin: 0;
	padding: 0;
}

body {
	-ms-overflow-style: -ms-autohiding-scrollbar;
}

body > main {
	display: block;
	position: relative;
	z-index: 2;
	overflow: visible;

	padding: var(--#{$PREFIX}-masthead-height) 0 2em;

	.row-container {
		padding: 0 1em;
	}
}
body.begin_under_masthead > main {
	padding-top: 0;
}
body.disable_bottom_padding > main {
	padding-bottom: 0;
}

.page_title {
	padding-top: 1em;
	text-align: center;

	&.has-header-background {
		padding-top: 3em;
		padding-bottom: 2em;
		margin-bottom: var(--page_title-margin_below_header);
	}
	background-color: var(--page_title-background_color);
	background-image: var(--page_title-background_image);
	background-position: var(--page_title-background_position);
	background-repeat: var(--page_title-background_repeat);
	background-size: var(--page_title-background_size);

	h1 {
		color: var(--page_title-title_color);
		text-shadow: 0.05em 0.05em 0.15em rgba(0, 0, 0, var(--page_title-title_shadow_opacity));
	}
}

article {
	header {
		position: relative;
		text-align: center;
		word-break: break-word;

		h1 {
			position: relative;
			line-height: 1.1;
		}
		h2 {
			font-size: 1.4em;
		}
		h3 {
			font-size: 1.25em;
		}
		h4, h5 {
			font-size: 1em;
		}
		h6 {
			font-size: .75em;
		}
	}

}

.cmls-anchor {
	display: block;
	position: relative;
	top: calc( (var(--#{$PREFIX}-masthead-height) * -1) - 1em );
	visibility: hidden;
}

@import '_wpadminbar';
@import './masthead/_';
@import './footer/_';
@import '_pagination';
@import './archives/_';
@import '_search';

